# fastapi-skilton

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_python.yml  security.yml  version_bump.yml
app/: main.py
app/api/: deps.py  main.py
app/auth/: schemas.py
app/core/: config.py  constants.py  db.py  init_data.py  redis.py
app/exceptions/: example.py
app/users/: models.py  schemas.py
